# paper_analysis

./: .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
config/: app.json
input/: sample_paper.txt
output/: report.json  report.md  template_report.json  template_report.md  template_report.parsed.md
scripts/: codex_run_api.sh  run.sh  run_web.sh
src/paper_analysis/: __init__.py  config.py  env.py  flow.py  main.py  state.py
src/paper_analysis/adapters/: __init__.py
src/paper_analysis/adapters/llm/: __init__.py  base.py  factory.py  openai_compatible.py
src/paper_analysis/adapters/parser/: __init__.py  base.py  figure_semantics_base.py  mcp_figure_semantics.py  pdf.py  plain_text.py
src/paper_analysis/adapters/storage/: __init__.py  base.py  job_store.py  local_fs.py
src/paper_analysis/api/: __init__.py  app.py  deps.py
src/paper_analysis/api/routes/: analysis.py  health.py
src/paper_analysis/crews/content_crew/: content_crew.py
src/paper_analysis/crews/content_crew/config/: agents.yaml  tasks.yaml
src/paper_analysis/domain/: __init__.py  enums.py  models.py  schemas.py
src/paper_analysis/runtime/: __init__.py  crewai_runtime.py
src/paper_analysis/runtime/crews/base/: __init__.py  two_agent_text_analysis.py
src/paper_analysis/runtime/crews/research/: __init__.py  document_structuring.py  figure_analysis.py  figure_evidence_curator.py  figure_grounding.py
src/paper_analysis/runtime/flows/: general_text_flow.py  research_paper_flow.py
src/paper_analysis/runtime/pipelines/: base.py  general_text.py  profiles.py  research_paper.py
src/paper_analysis/services/: __init__.py  analysis_service.py  artifact_service.py  bootstrap.py  job_executor.py  job_logging.py  job_service.py
src/paper_analysis/tools/: __init__.py  custom_tool.py  keyword_search.py  section_extractor.py
tests/integration/: test_api.py
tests/unit/: test_analysis_service.py  test_document_structuring_runner.py  test_figure_analysis_runner.py  test_figure_semantic_extractor.py  test_general_text_pipeline.py  test_llm_adapter.py  test_pdf_parser.py  test_plain_text_parser.py  test_research_paper_pipeline.py  test_schemas.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: main.jsx
web/src/api/: client.js
web/src/app/: App.jsx  app.css
web/src/components/: ReportPanel.jsx  StatusPanel.jsx
