[project]
name = "paper_analysis"
version = "0.1.0"
description = "paper_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai[tools]==1.14.1",
    "httpx[socks]>=0.27,<1.0"
]

[project.scripts]
kickoff = "paper_analysis.main:kickoff"
run_crew = "paper_analysis.main:kickoff"
plot = "paper_analysis.main:plot"
run_with_trigger = "paper_analysis.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
