[project]
name = "paper_analysis"
version = "0.1.0"
description = "CrewAI-based research paper analysis system with PDF parsing, multi-agent runtime, FastAPI backend, and lightweight web UI"
readme = "README.md"
requires-python = ">=3.12,<3.14"
keywords = ["CrewAI", "research-paper-analysis", "pdf", "fastapi", "multi-agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "crewai[tools]==1.14.1",
    "fastapi>=0.115,<1.0",
    "httpx[socks]>=0.27,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn>=0.30,<1.0"
]

[project.scripts]
kickoff = "paper_analysis.main:kickoff"
run_crew = "paper_analysis.main:kickoff"
plot = "paper_analysis.main:plot"
run_with_trigger = "paper_analysis.main:run_with_trigger"
serve_api = "paper_analysis.api.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
